# vfile_rest

./: README.md
vfile_server/: .coveragerc  AUTHORS.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
vfile_server/docs/: Makefile  conf.py  index.rst
vfile_server/src/vfile_server/: __init__.py  app.py
vfile_server/tests/: conftest.py  test_skeleton.py
vsfile_client/: .coveragerc  README.rst  setup.cfg
vsfile_client/src/vsfile_client/: __init__.py  vsfile_client.py
vsfile_client/tests/: conftest.py  test_client.py
