[metadata]
name = vsfile_client
description = Provide interface to interact with REST API filesystem
author = iyuroch
author-email = iyuroch@gmail.com
license = mit
url = https://github.com/iyuroch
long-description = file: README.rst
platforms = linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
# TODO: add dependancies here
# install_requires = numpy; scipy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[test]
extras = True

[tool:pytest]
addopts =
    --cov vsfile_client --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.1
package = vsfile_client
